--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ fastapi==0.104.1
 uvicorn==0.24.0
 openai==1.3.7
 sentence-transformers==2.7.0
-faiss-cpu==1.7.4
-numpy==1.24.3
+faiss-cpu==1.12.0
+numpy>=1.25.0,<3.0
 pydantic==2.5.0
 python-dotenv==1.0.0
 httpx==0.25.2
